# tauri-plugin-decorum

./: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/: copilot-instructions.md
examples/tauri-app/: package.json
examples/tauri-app/src/: App.tsx  Titlebar.tsx  styles.css
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs  main.rs
guest-js/: index.ts
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: set_window_buttons_inset.toml
permissions/schemas/: schema.json
src/: App.tsx  Titlebar.tsx  commands.rs  config.rs  desktop.rs  lib.rs  script.js  styles.css  traffic.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: README.md  hello.cc  hello.cpp  hello.h  main.rs
src-tauri/src/include/: hello.h
src/js/: controls.js  linux-controls.js  titlebar.js
src/macos/: mod.rs  nswindow_delegates.rs
