[package]
name = "tauri-plugin-decorum"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-decorum"

[dependencies]
tauri = { version = "2.0.0-beta.17" }
serde = "1.0"
thiserror = "1.0"
anyhow = "1.0.83"

[target.'cfg(target_os = "macos")'.dependencies]
rand = "0.8.5"
cocoa = "0.25.0"
objc = "0.2.7"

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.56.0"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.13", features = ["build"] }
