[package]
name = "tauri-windows-titlebar"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }
cxx-build = "1.0"

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cxx = "1.0.119"
enigo = "0.2.0"
anyhow = "1.0.82"
window-vibrancy = "0.5.0"
